--- a/Module 2 Folder/Java's Math Class/Description
+++ b/Module 2 Folder/Java's Math Class/Description
@@ -46,7 +46,7 @@ I was able to use Math.pow and Math.sqrt to better understand how they can be us
 I know that I will be able to use it when working with other formulas such as finding the area of a circle. 
 
 <-s>: Overall, the major mistake I made was not including the Math.random() the first time I wrote this program. 
-I was confused at first so I spoke with Mr. Shelton and he gave me some helpful tips on how the Math.random() should be used in this program. 
+I was confused at first so I spoke with my teacher and he gave me some helpful tips on how the Math.random() should be used in this program. 
 When he said "randomly generated numbers" that's when it hit me! I knew what I should've done and how I should've done it. 
 To fix this mistake, I will be sure to reread the directions and ask if there is something confusing that I don't understand. 
 I will be sure to fix this in the future. 
