--- a/Module 4 Folder/Reading Text Files/Description
+++ b/Module 4 Folder/Reading Text Files/Description
@@ -29,4 +29,4 @@ test1.txt has a total of 10 families while test2.txt has a total of 25 families.
 
 
 
-I also learned the importance of while loops and what counter++ does. 
+I also learned the importance of while loops, and the purpose of counter++. 
